@@ -1,6 +1,7 @@
 Changes for 2.2.6rc1
 
 New features:
+A......... [ZBX-8563] added field "logtimefmt" to exported items (Krists)
 A.......S. [ZBX-8473] improved performance of deleting triggers by API and server - events will be deleted only by the housekeeper (Krists, Sasha)
 A.F....... [ZBX-1357] updated Polish and Spanish translations; thanks to Zabbix translators (Richlv)
 
